--- a/1.html
+++ b/1.html
@@ -3,10 +3,10 @@
 <head>
   <title>WEB1 -html</title>
   <meta charset="utf-8">
-  <h1>한국은 정말 위대한 나라입니다</h1>
+  <h1>Avengers</h1>
 </head>
 <body>
-  <h1><a href="index.html">오버워치란?</h1>
+  <h1><a href="index.html">어벤져스 영웅설명</h1>
   <ol>
     <li><a href="1.html">HTML</li>
     <li><a href="2.html">CSS</li>
@@ -23,6 +23,26 @@
   <p></p>안녕하세요 이건 HTML입니다
 <a href="https://namu.wiki/w/%EC%95%84%EC%9D%B4%EC%96%B8%EB%A7%A8"
 target="_blank" title="아이언맨 나무위키">아이언맨
+
+<div id="disqus_thread"></div>
+<script>
+    /**
+    *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+    *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
+    /*
+    var disqus_config = function () {
+    this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+    this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+    };
+    */
+    (function() { // DON'T EDIT BELOW THIS LINE
+    var d = document, s = d.createElement('script');
+    s.src = 'https://web-1-nhc5s5kd4x.disqus.com/embed.js';
+    s.setAttribute('data-timestamp', +new Date());
+    (d.head || d.body).appendChild(s);
+    })();
+</script>
+<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
 
   <img src="coding.jpg" width="100%">
 </body>
