--- a/index.html
+++ b/index.html
@@ -16,14 +16,36 @@
   <ul>
 
 
-  <h2>오버워치<h2>
+  <h2>WEB<h2>
   <p>Hypertext</p Marup Language (HTML) is the standard markup <br>languagebr for <strong>creating <u>web</u> pages</strong> and web applications.
 
 
   <p></p>안녕하세요 이건 HTML입니다
-<a href="https://namu.wiki/w/%EC%95%84%EC%9D%B4%EC%96%B8%EB%A7%A8"
-target="_blank" title="아이언맨 나무위키">아이언맨
 
-  <img src="coding.jpg" width="100%">
+
+
+
+
+  <div id="disqus_thread"></div>
+  <div id="disqus_thread"></div>
+  <script>
+      /**
+      *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+      *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
+      /*
+      var disqus_config = function () {
+      this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+      this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+      };
+      */
+      (function() { // DON'T EDIT BELOW THIS LINE
+      var d = document, s = d.createElement('script');
+      s.src = 'https://web-1-nhc5s5kd4x.disqus.com/embed.js';
+      s.setAttribute('data-timestamp', +new Date());
+      (d.head || d.body).appendChild(s);
+      })();
+  </script>
+  <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+
 </body>
 </html>
